--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-pydantic==2.5.3
-joblib==1.3.2
-numpy==1.26.3
-pandas==2.1.4
-xgboost==2.0.3
-scikit-learn==1.4.0
+fastapi>=0.109.0
+uvicorn>=0.27.0
+pydantic>=2.5.0
+joblib>=1.3.0
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0
+xgboost>=2.0.0
+scikit-learn>=1.3.0
